[tool.poetry]
name = "recruitment-currencies"
version = "0.1.0"
description = ""
authors = ["Wojtek Jurkowlaniec <wojtek.jurkowlaniec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
streamlit = "^1.29.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
